libtlafmt/tests/snapshots/format__corpus@MCInnerSequential.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCInnerSequential.tla
---
--------------------------- MODULE MCInnerSequential ---------------------------
EXTENDS InnerSequential

CONSTANT MaxQLen
Constraint == \A p \in Proc: Len(opQ[p]) <= MaxQLen

AlwaysResponds ==
    (*************************************************************************)
  (* A simple liveness property, implied by the fact that every request    *)
  (* eventually generates a response.                                      *)
  (*************************************************************************)
    \A p \in Proc, r \in Reg:
        (regFile[p][r].op /= "Free") ~> (regFile[p][r].op = "Free")
================================================================================
