libtlafmt/tests/snapshots/format__corpus@MCQuicksort.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCQuicksort.tla
---
------------------------------ MODULE MCQuicksort ------------------------------
EXTENDS Quicksort
CONSTANT MaxSeqLen
ASSUME MaxSeqLen \in Nat
LimitedSeq(S) == UNION {[1..n -> S]: n \in 1..MaxSeqLen}
================================================================================
