libtlafmt/tests/snapshots/format__corpus@MCTwoPhase.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCTwoPhase.tla
---
------------------------------ MODULE MCTwoPhase -------------------------------
XInit(v) == v = 0
XAct(i, xInit, xNext) == xNext = xInit
VARIABLES p, c, x
INSTANCE TwoPhase
================================================================================
