libtlafmt/tests/snapshots/format__corpus@MCYoYoNoPruning.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCYoYoNoPruning.tla
---
---------------------------- MODULE MCYoYoNoPruning ----------------------------
EXTENDS Integers

Nodes == 1..5
Edges == {{1, 2}, {1, 5}, {3, 4}, {3, 5}, {4, 5}}

(*
Nodes == {2,3,4,5,7,11,12,14,20,31,41}
Edges == {{2,31}, {3,11}, {3,12}, {3,14}, {4,14}, {4,20}, 
          {5,11}, {5,12}, {5,20}, {7,20}, {7,31}, 
          {11,12}, {12,20}, {20,41}}
*)

VARIABLES phase, incoming, outgoing, mailbox

INSTANCE YoYoNoPruning

================================================================================
